Created testing functionality for testing the 'user side of the API

--- a/pom.xml
+++ b/pom.xml
@@ -111,5 +111,20 @@
             <version>2.1.214</version>
         </dependency>
 <!--        EINDE voor een localhost database:-->
+
+<!--        Voor testing functies/code:-->
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <version>3.0.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 </project>
